--- a/jitpack.yml
+++ b/jitpack.yml
@@ -3,4 +3,4 @@ jdk:
 before_install:
   - ./scripts/before_install.sh
 install:
-  - ./gradlew clean build publishToMavenLocal 
+  - ./gradlew clean build
