--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -35,7 +35,7 @@ file(GLOB ELF_CLEANER_SOURCES elf-cleaner/*.c elf-cleaner/*.cpp)
 add_custom_target(elf-cleaner
     COMMENT "Building elf-cleaner"
     VERBATIM
-    COMMAND ${CMAKE_CXX_COMPILER} -O2 -std=c++11 -DPACKAGE_NAME="elf-cleaner" -DPACKAGE_VERSION="" -DCOPYRIGHT="" -o "${CMAKE_CURRENT_BINARY_DIR}/elf-cleaner" ${ELF_CLEANER_SOURCES}
+    COMMAND clang++ -O2 -std=c++11 -DPACKAGE_NAME="elf-cleaner" -DPACKAGE_VERSION="" -DCOPYRIGHT="" -o "${CMAKE_CURRENT_BINARY_DIR}/elf-cleaner" ${ELF_CLEANER_SOURCES}
 )
 
 add_custom_command(TARGET libwg.so POST_BUILD VERBATIM COMMAND "${CMAKE_CURRENT_BINARY_DIR}/elf-cleaner"
